# WX-Native-Kt-Demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wx/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.h  native-lib.cpp
app/src/main/java/com/wx/nativex/kt/demo/: MainActivity.kt  NativeCallBack.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
